// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HotelEstimateCard /> renders as expected 1`] = `
<Component
  country="Rwanda"
  estimate={2}
  isLoading={false}
  region="West Africa"
  regionId={2}
/>
`;

exports[`<ListHotelEstimates /> renders HotelEstimates page without crashing 1`] = `
<div>
  <div
    className="no-templates list-templates"
  >
    <div
      className="content"
    >
      <img
        alt=""
        src="no-document.svg"
      />
      <p>
        No Hotel Estimates have been created
      </p>
    </div>
  </div>
</div>
`;

exports[`<NoHotelEstimates /> renders without crashing 1`] = `
<div
  className="no-templates list-templates"
>
  <div
    className="content"
  >
    <img
      alt=""
      src="no-document.svg"
    />
    <p>
      No Hotel Estimates have been created
    </p>
  </div>
</div>
`;
